added new components for classes

--- a/client/src/components/classes/index.css
+++ b/client/src/components/classes/index.css
@@ -40,4 +40,30 @@
     width: 390px;
   }
 }
+
+.classes .class-card-champions {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 0 0 20px 0;
+}
+
+.classes .class-card-champions .champion-row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-top: 10px;
+}
 /*# sourceMappingURL=index.css.map */
