--- a/client/src/components/classes/index.scss
+++ b/client/src/components/classes/index.scss
@@ -37,4 +37,18 @@
     }
 
     
+    // shared styles among all cards
+    .class-card-champions {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        padding: 0 0 20px 0;
+
+        .champion-row {
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            margin-top: 10px;
+        }
+    }
 }
