--- a/client/src/components/classes/components/class-card/index.scss
+++ b/client/src/components/classes/components/class-card/index.scss
@@ -4,18 +4,20 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-between;
     color: $base-text-colour;
     margin: 3px 3px 6px 3px;
     border: 1px solid rgba(255, 255, 255, 0.2);
 
     .class-card-title {
-        font-size: 48px;
-        font-weight: 300;
-        margin: 15px 0;
+        font-size: 20px;
+        font-weight: 500;
+        margin: 15px 0 5px 0;
     }
 
     .class-card-description {
-        margin: 0;
-        padding: 0 10px;
+        margin: 0 10px 10px 10px;
+        font-size: 13px;
+        text-align: center;
     }
 }
