--- a/client/src/components/classes/index.scss
+++ b/client/src/components/classes/index.scss
@@ -17,21 +17,21 @@
         flex-direction: column;
 
 
-        // on medium breakpoint, go from having a single column of classes to two
+        // on medium breakpoint, go from having a single column of classes to two flexible sized ones
         @include breakpoint(md) {
             flex-direction: row;
             flex-wrap: wrap;
-            justify-content: space-evenly;
+            justify-content: center;
             
             .class-card {
                 width: 48%;
             }
         }
 
-        // on extra large breakpoint, go from having two columns of classes, to three
-        @include breakpoint(xl) {
+        // on large breakpoint, go from having flexible size to fixed
+        @include breakpoint(lg) {
             .class-card {
-                width: 390px;
+                width: 275px;
             }
         }
     }
@@ -42,13 +42,12 @@
         width: 100%;
         display: flex;
         flex-direction: column;
-        padding: 0 0 20px 0;
+        padding: 0 0 10px 0;
 
         .champion-row {
             display: flex;
             flex-direction: row;
             justify-content: center;
-            margin-top: 10px;
         }
     }
 }
