adjusted cards so their size is proporionate to the number of champions for lg+ bps

--- a/client/src/components/classes/components/class-card/index.css
+++ b/client/src/components/classes/components/class-card/index.css
@@ -13,7 +13,7 @@
       -ms-flex-pack: justify;
           justify-content: space-between;
   color: #eedab5;
-  margin: 3px 3px 6px 3px;
+  margin: 3px;
   border: 1px solid rgba(255, 255, 255, 0.2);
 }
 
