--- a/client/src/components/classes/components/class-card/index.scss
+++ b/client/src/components/classes/components/class-card/index.scss
@@ -6,7 +6,7 @@
     align-items: center;
     justify-content: space-between;
     color: $base-text-colour;
-    margin: 3px 3px 6px 3px;
+    margin: 3px;
     border: 1px solid rgba(255, 255, 255, 0.2);
 
     .class-card-title {
