--- a/client/src/components/classes/index.css
+++ b/client/src/components/classes/index.css
@@ -36,8 +36,14 @@
 }
 
 @media (min-width: 992px) {
-  .classes .classes-content .class-card {
-    width: 275px;
+  .classes .classes-content .class-card.num-4 {
+    width: 270px;
+  }
+  .classes .classes-content .class-card.num-3 {
+    width: 205px;
+  }
+  .classes .classes-content .class-card.num-2, .classes .classes-content .class-card.num-1 {
+    width: 140px;
   }
 }
 
