--- a/client/src/components/items/index.scss
+++ b/client/src/components/items/index.scss
@@ -18,25 +18,49 @@
         align-items: center;
 
         
+        // hidden on sm, only visible on md +
         .item-row {
-            display: flex;
-            flex-direction: row;
+            display: none;
+        }
 
-            // header row 
-            &:first-child {
-                background: rgb(42, 47, 49);
-            }
+        // make item rows visible on md +
+        @include breakpoint(md) {
+            .item-row {
+                display: flex;
+                flex-direction: row;
     
+                // header row 
+                &:first-child {
+                    background: rgb(42, 47, 49);
+                }
+        
+            }
         }
 
         .item-tile {
             display: flex;
             flex-direction: row;
             align-items: center;
-            width: 130px;
+            width: 66px;
             border: 1px solid rgba(255, 255, 255, 0.2);
             margin: 3px;
             padding: 3px;
+
+            // change width for xl + since we show description on larger bps
+            @include breakpoint(xl) {
+                width: 120px;
+            }
+            
+            .item-row {
+            display: flex;
+            flex-direction: row;
+
+                // header row 
+                &:first-child {
+                    background: rgb(42, 47, 49);
+                }
+    
+            }
 
             // left most column
             &:first-child {
@@ -64,14 +88,20 @@
         }
 
         .item-img {
-            width: 64px;
-            height: 64px;
+            width: 50px;
+            height: 50px;
             border: 1px solid black;
         }
 
         .item-desc {
+            display: none;
             color: $base-text-colour;
-            padding: 10px;
-        }
+            padding: 3px 5px;
+
+            // make item desc visible on xl bp
+            @include breakpoint(xl) {
+                display: block;
+            }
+        }        
     }
 }
