cleaned up the class code, so it is generated from json file

--- a/client/src/components/items/index.scss
+++ b/client/src/components/items/index.scss
@@ -97,6 +97,7 @@
             display: none;
             color: $base-text-colour;
             padding: 3px 5px;
+            font-size: 11px;
 
             // make item desc visible on xl bp
             @include breakpoint(xl) {
