--- a/client/src/components/classes/components/champion-icon/index.scss
+++ b/client/src/components/classes/components/champion-icon/index.scss
@@ -1,6 +1,9 @@
+$icon-width: 60px;
+$icon-height: 60px;
+
 .champion-icon {
-    width: 60px;
-    height: 60px;
+    width: $icon-width;
+    height: $icon-height;
     background: white;
     margin: 0 3px 6px 3px;
 
@@ -11,5 +14,34 @@
     .champion-icon-img {
         width: 100%;
         height: 100%;
+    }
+
+    .champion-icon-tier {
+        position: absolute;
+        font-size: 26px;
+        display: flex;
+        justify-content: flex-end;
+        align-items: flex-end;
+        width: $icon-height;
+        height: $icon-height;
+        margin: 10px 0 0 6px;
+        font-weight: 500;
+        text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+        z-index: 1;
+        pointer-events: none;
+
+        &.tier-2 {
+            color: #e99747;
+        }
+
+        &.tier-3 {
+            color: #a0f393
+        }
+        &.tier-4 {
+            color: #63c5f3;
+        }
+        &.tier-5 {
+            color: #ff4949
+        }
     }
 }
