--- a/client/src/components/items/index.css
+++ b/client/src/components/items/index.css
@@ -106,7 +106,8 @@
 .items .items-content .item-desc {
   display: none;
   color: #eedab5;
-  padding: 3px 5px;
+  padding: 0px 5px;
+  margin: 0;
   font-size: 11px;
 }
 
