added champion section with drop rate table, and fixed typo in items config

--- a/client/src/components/classes/components/champion-icon/index.css
+++ b/client/src/components/classes/components/champion-icon/index.css
@@ -33,6 +33,7 @@
   text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
   z-index: 1;
   pointer-events: none;
+  color: #eedab5;
 }
 
 .champion-icon .champion-icon-tier.tier-2 {
