--- a/client/src/styles/variables.scss
+++ b/client/src/styles/variables.scss
@@ -1,1 +1,13 @@
+
+
 $base-text-colour: rgb(238, 218, 181);
+
+// colours based on tiers
+$tier-one-colour: #eedab5;
+$tier-two-colour: #e99747;
+$tier-three-colour: #a0f393;
+$tier-four-colour: #63c5f3;
+$tier-five-colour: #ff4949;
+
+// main border style
+$main-border-style: 1px solid rgba(255, 255, 255, 0.2);
