--- a/client/src/components/classes/components/class-card/index.scss
+++ b/client/src/components/classes/components/class-card/index.scss
@@ -7,7 +7,7 @@
     justify-content: space-between;
     color: $base-text-colour;
     margin: 3px;
-    border: 1px solid rgba(255, 255, 255, 0.2);
+    border: $main-border-style;
 
     .class-card-title {
         font-size: 20px;
