--- a/client/src/components/items/index.css
+++ b/client/src/components/items/index.css
@@ -2,10 +2,14 @@
   margin: 0;
   text-align: center;
   color: #eedab5;
-  padding: 32px;
+  padding: 32px 32px 0 32px;
   font-size: 72px;
   font-weight: 500;
   font-family: sans-serif;
+}
+
+.items .toggle {
+  margin-bottom: 32px;
 }
 
 .items .items-content {
