--- a/client/src/components/items/index.scss
+++ b/client/src/components/items/index.scss
@@ -6,10 +6,14 @@
         margin: 0;
         text-align: center;
         color: $base-text-colour;
-        padding: 32px;
+        padding: 32px 32px 0 32px;
         font-size: 72px;
         font-weight: 500;
         font-family: sans-serif;
+    }
+
+    .toggle {
+        margin-bottom: 32px;
     }
 
     .items-content {
