--- a/client/src/components/items/index.css
+++ b/client/src/components/items/index.css
@@ -12,112 +12,13 @@
   margin-bottom: 32px;
 }
 
-.items .items-content {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.items .items-content .item-row {
+.items .items-table, .items .items-chart {
   display: none;
 }
 
-@media (min-width: 768px) {
-  .items .items-content .item-row {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-  }
-  .items .items-content .item-row:first-child {
-    background: #2a2f31;
-  }
-}
-
-.items .items-content .item-tile {
+.items .items-table.items-content-visible, .items .items-chart.items-content-visible {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  width: 66px;
-  border: 1px solid rgba(255, 255, 255, 0.2);
-  margin: 3px;
-  padding: 3px;
-}
-
-@media (min-width: 1200px) {
-  .items .items-content .item-tile {
-    width: 120px;
-  }
-}
-
-.items .items-content .item-tile .item-row {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-}
-
-.items .items-content .item-tile .item-row:first-child {
-  background: #2a2f31;
-}
-
-.items .items-content .item-tile:first-child {
-  background: #2a2f31;
-}
-
-.items .items-content .item-tile.item-tile-highlight {
-  background: #2a2f31;
-}
-
-.items .items-content .item-tile.item-tile-darken {
-  background: #0f1111;
-}
-
-.items .items-content .item-tile.item-tile-darken .item-img {
-  opacity: 0.5;
-}
-
-.items .items-content .item-tile:hover {
-  cursor: pointer;
-}
-
-.items .items-content .item-img {
-  width: 50px;
-  height: 50px;
-  border: 1px solid black;
-}
-
-.items .items-content .item-desc {
-  display: none;
-  color: #eedab5;
-  padding: 0px 5px;
-  margin: 0;
-  font-size: 11px;
-}
-
-@media (min-width: 1200px) {
-  .items .items-content .item-desc {
-    display: block;
-  }
 }
 /*# sourceMappingURL=index.css.map */
