--- a/client/src/components/items/index.scss
+++ b/client/src/components/items/index.scss
@@ -16,98 +16,12 @@
         margin-bottom: 32px;
     }
 
-    .items-content {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-
+    // toggle items table and chart
+    .items-table, .items-chart {
+        display: none;
         
-        // hidden on sm, only visible on md +
-        .item-row {
-            display: none;
-        }
-
-        // make item rows visible on md +
-        @include breakpoint(md) {
-            .item-row {
-                display: flex;
-                flex-direction: row;
-    
-                // header row 
-                &:first-child {
-                    background: rgb(42, 47, 49);
-                }
-        
-            }
-        }
-
-        .item-tile {
+        &.items-content-visible {
             display: flex;
-            flex-direction: row;
-            align-items: center;
-            width: 66px;
-            border: 1px solid rgba(255, 255, 255, 0.2);
-            margin: 3px;
-            padding: 3px;
-
-            // change width for xl + since we show description on larger bps
-            @include breakpoint(xl) {
-                width: 120px;
-            }
-            
-            .item-row {
-            display: flex;
-            flex-direction: row;
-
-                // header row 
-                &:first-child {
-                    background: rgb(42, 47, 49);
-                }
-    
-            }
-
-            // left most column
-            &:first-child {
-                background: rgb(42, 47, 49);
-            }
-
-            &.item-tile-highlight {
-                background: rgb(42, 47, 49);
-            }
-
-            &.item-tile-darken {
-                background: rgb(15, 17, 17);
-
-                .item-img {
-                    opacity: 0.5;
-                }
-            }
-
-            
-
-            &:hover {
-                cursor: pointer;
-                //background: rgb(42, 47, 49);
-            }
         }
-
-        .item-img {
-            width: 50px;
-            height: 50px;
-            border: 1px solid black;
-        }
-
-        .item-desc {
-            display: none;
-            color: $base-text-colour;
-            padding: 0px 5px;
-            margin: 0;
-            font-size: 11px;
-
-            // make item desc visible on xl bp
-            @include breakpoint(xl) {
-                display: block;
-            }
-        }        
     }
 }
