--- a/client/src/components/items/components/items-chart/index.css
+++ b/client/src/components/items/components/items-chart/index.css
@@ -114,10 +114,6 @@
   border: 2px solid black;
 }
 
-.items-chart .items-chart-card-img-highlight {
-  border: 3px solid white;
-}
-
 .items-chart .items-chart-builds-from {
   font-size: 10px;
 }
@@ -126,6 +122,11 @@
   width: 30px;
   height: 30px;
   margin: 3px 10px;
+  border: 1px solid black;
+}
+
+.items-chart .items-chart-card-secondary-img-highlight {
+  border: 1px solid white;
 }
 
 .items-chart .items-chart-card-desc {
