--- a/client/src/components/items/components/items-chart/index.scss
+++ b/client/src/components/items/components/items-chart/index.scss
@@ -30,6 +30,10 @@
         box-sizing: border-box;
         border: 2px solid black;
         cursor: pointer;
+
+        &.items-chart-card-img-highlight {
+            border: 3px solid white;
+        }
     }
 
     .items-chart-content {
