changed item cards to be dynamic width on <sm bp

--- a/client/src/components/items/components/items-chart/index.scss
+++ b/client/src/components/items/components/items-chart/index.scss
@@ -49,7 +49,11 @@
         align-items: center;
         border: $main-border-style;
         padding: 10px 5px;
-        width: 145px;
+        width: 45%; 
+        // change item card size from dynamic to fixed
+        @include breakpoint(sm) {
+            width: 145px;
+        }
 
         &.items-chart-card-highlight {
             background: #2a2f31;
