--- a/client/src/components/items/components/items-chart/index.css
+++ b/client/src/components/items/components/items-chart/index.css
@@ -79,7 +79,13 @@
           align-items: center;
   border: 1px solid rgba(255, 255, 255, 0.2);
   padding: 10px 5px;
-  width: 145px;
+  width: 45%;
+}
+
+@media (min-width: 480px) {
+  .items-chart .items-chart-card {
+    width: 145px;
+  }
 }
 
 .items-chart .items-chart-card.items-chart-card-highlight {
