started work on navbar

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,12 @@
 .App {
   min-height: 100vh;
   background: #12171a;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
 }
 /*# sourceMappingURL=App.css.map */
