converted colour scheme to a lighter grey by default, adjust navbar

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,6 @@
 .App {
   min-height: 100vh;
-  background: #12171a;
+  background: #828282;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
