--- a/client/src/components/classes/components/class-card/index.css
+++ b/client/src/components/classes/components/class-card/index.css
@@ -15,6 +15,7 @@
   color: #eedab5;
   margin: 3px;
   border: 1px solid rgba(255, 255, 255, 0.2);
+  background: #555555;
 }
 
 .class-card .class-card-title {
