--- a/client/src/components/items/components/items-chart/components/item-card/index.css
+++ b/client/src/components/items/components/items-chart/components/item-card/index.css
@@ -12,12 +12,19 @@
   border: 1px solid rgba(255, 255, 255, 0.2);
   padding: 10px 5px;
   width: 45%;
+  background: #555555;
+  margin: 1px;
+  color: #fffacd;
 }
 
 @media (min-width: 480px) {
   .items-chart-card {
     width: 145px;
   }
+}
+
+.items-chart-card .items-chart-card-title {
+  text-align: center;
 }
 
 .items-chart-card.items-chart-card-highlight {
@@ -35,6 +42,8 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
 }
 
 .items-chart-card .items-chart-card-main-img {
