--- a/client/src/components/navbar/components/hamburger/index.scss
+++ b/client/src/components/navbar/components/hamburger/index.scss
@@ -1,41 +1,44 @@
+@import "../../../../styles/variables";
+@import "../../../../styles/mixins/mediaQueries";
+
 .hamburger {
-    width: 50px;
-    height: 33px;
+    width: 40px;
+    height: 28px;
     position: relative;
     margin: 0;
     padding: 0;
     transform: rotate(0deg);
-    transition: .5s ease-in-out;
+    transition: .25s linear;
     cursor: pointer;
 
     .hamburger-bar {
         display: block;
         position: absolute;
-        height: 6px;
+        height: 2px;
         width: 100%;
-        background: #d3531a;
+        background: $primary-font-colour;
         border-radius: 9px;
         opacity: 1;
         left: 0;
         transform: rotate(0deg);
-        transition: .25s ease-in-out;
+        transition: .25s linear;
 
         &:nth-child(1) {
             top: 0px;
         }
 
         &:nth-child(2), &:nth-child(3) {
-            top: 13px;
+            top: 11px;
         }
         &:nth-child(4) {
-            top: 26px;
+            top: 22px;
         }
     }
 
     &.open {
         .hamburger-bar {
             &:nth-child(1) {
-                top: 13px;
+                top: 11px;
                 width: 0%;
                 left: 50%;
             }
@@ -46,7 +49,7 @@
                 transform: rotate(-45deg);
             }
             &:nth-child(4) {
-                top: 13px;
+                top: 11px;
                 width: 0%;
                 left: 50%;
             }
