--- a/client/src/components/toggle/index.scss
+++ b/client/src/components/toggle/index.scss
@@ -11,7 +11,7 @@
         margin: 0 10px;
 
         &.toggle-active-text {
-            color: $base-text-colour;
+            color: $primary-font-colour;
         }
     }
     
