--- a/client/src/components/champions/index.css
+++ b/client/src/components/champions/index.css
@@ -2,6 +2,7 @@
   margin: 0;
   text-align: center;
   color: #eedab5;
+  text-shadow: -1px -1px 1px rgba(255, 255, 255, 0.1), 1px 1px 1px rgba(0, 0, 0, 0.5);
   padding: 32px;
   font-size: 52px;
   font-weight: 500;
@@ -31,7 +32,7 @@
 }
 
 .champions .champion-drop-rate-table-title {
-  color: #eedab5;
+  color: #fffacd;
   font-size: 20px;
   font-weight: 300;
   padding: 0;
