--- a/client/src/components/items/components/toggle/index.css
+++ b/client/src/components/items/components/toggle/index.css
@@ -15,7 +15,7 @@
 }
 
 .toggle .toggle-label {
-  color: #7e7d7c;
+  color: #262626;
   margin: 0 10px;
 }
 
@@ -43,7 +43,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: #ccc;
+  background-color: #555555;
   -webkit-transition: .4s;
   transition: .4s;
 }
@@ -55,7 +55,7 @@
   width: 22px;
   left: 3px;
   bottom: 3px;
-  background-color: #12171a;
+  background-color: #828282;
   -webkit-transition: .4s;
   transition: .4s;
 }
