--- a/client/src/components/items/index.css
+++ b/client/src/components/items/index.css
@@ -2,6 +2,7 @@
   margin: 0;
   text-align: center;
   color: #eedab5;
+  text-shadow: -1px -1px 1px rgba(255, 255, 255, 0.1), 1px 1px 1px rgba(0, 0, 0, 0.5);
   padding: 32px 32px 0 32px;
   font-size: 72px;
   font-weight: 500;
