--- a/client/src/components/navbar/components/hamburger/index.css
+++ b/client/src/components/navbar/components/hamburger/index.css
@@ -1,29 +1,29 @@
 .hamburger {
-  width: 50px;
-  height: 33px;
+  width: 40px;
+  height: 28px;
   position: relative;
   margin: 0;
   padding: 0;
   -webkit-transform: rotate(0deg);
           transform: rotate(0deg);
-  -webkit-transition: .5s ease-in-out;
-  transition: .5s ease-in-out;
+  -webkit-transition: .25s linear;
+  transition: .25s linear;
   cursor: pointer;
 }
 
 .hamburger .hamburger-bar {
   display: block;
   position: absolute;
-  height: 6px;
+  height: 2px;
   width: 100%;
-  background: #d3531a;
+  background: #eedab5;
   border-radius: 9px;
   opacity: 1;
   left: 0;
   -webkit-transform: rotate(0deg);
           transform: rotate(0deg);
-  -webkit-transition: .25s ease-in-out;
-  transition: .25s ease-in-out;
+  -webkit-transition: .25s linear;
+  transition: .25s linear;
 }
 
 .hamburger .hamburger-bar:nth-child(1) {
@@ -31,15 +31,15 @@
 }
 
 .hamburger .hamburger-bar:nth-child(2), .hamburger .hamburger-bar:nth-child(3) {
-  top: 13px;
+  top: 11px;
 }
 
 .hamburger .hamburger-bar:nth-child(4) {
-  top: 26px;
+  top: 22px;
 }
 
 .hamburger.open .hamburger-bar:nth-child(1) {
-  top: 13px;
+  top: 11px;
   width: 0%;
   left: 50%;
 }
@@ -55,7 +55,7 @@
 }
 
 .hamburger.open .hamburger-bar:nth-child(4) {
-  top: 13px;
+  top: 11px;
   width: 0%;
   left: 50%;
 }
