--- a/client/src/components/navbar/index.css
+++ b/client/src/components/navbar/index.css
@@ -1,5 +1,5 @@
 .navbar {
-  background: #aeaeaeed;
+  background: #212527;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -9,7 +9,7 @@
           flex-direction: column;
   min-width: 230px;
   width: 230px;
-  margin-left: -170px;
+  margin-left: -176px;
   -webkit-transition: .25s ease-in-out;
   transition: .25s ease-in-out;
   -webkit-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
@@ -18,6 +18,14 @@
 
 .navbar.open {
   margin-left: 0;
+}
+
+.navbar .navbar-content {
+  position: fixed;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 230px;
 }
 
 .navbar .navbar-header-row {
@@ -34,11 +42,29 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 10px 5px;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  padding: 5px 8px;
 }
 
 .navbar .navbar-header-title {
+  color: #eedab5;
+  font-weight: 300;
   margin: 0;
   padding: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
 }
 /*# sourceMappingURL=index.css.map */
