--- a/client/src/components/navbar/index.scss
+++ b/client/src/components/navbar/index.scss
@@ -1,10 +1,13 @@
+@import "../../styles/variables";
+@import "../../styles/mixins/mediaQueries";
+
 .navbar {
-    background:#aeaeaeed;
+    background:$primary-dark-grey;
     display: flex;
     flex-direction: column;
     min-width: 230px;
     width: 230px;
-    margin-left: -170px;
+    margin-left: -176px;
     transition: .25s ease-in-out;
     box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 
@@ -12,16 +15,30 @@
         margin-left: 0;
     }
 
+    // this is the fixed version of navbar
+    .navbar-content {
+        position: fixed;
+        display: flex;
+        width: 230px;
+    }
+
     .navbar-header-row {
         display: flex;
         flex-direction: row;
         justify-content: space-between;
         align-items: center;
-        padding: 10px 5px;
+        flex-grow: 1;
+        padding: 5px 8px;
     }
 
     .navbar-header-title {
+        color: $primary-font-colour;
+        font-weight: 300;
         margin: 0;
         padding: 0;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        flex-grow: 1;
     }
 }
