--- a/client/src/styles/variables.scss
+++ b/client/src/styles/variables.scss
@@ -1,6 +1,23 @@
-$base-bg-colour: rgb(18, 23, 26);
+// text colours
+$primary-font-colour: #eedab5;
+$secondary-font-colour: #fffacd;
 
-$base-text-colour: rgb(238, 218, 181);
+$primary-font-colour-negative: #262626;
+
+$primary-text-shadow: -1px -1px 1px rgba(255,255,255,.1), 1px 1px 1px rgba(0,0,0,.5);
+
+// light greys
+$primary-light-grey: #828282;
+$secondary-light-grey: #555555;
+$tertiary-light-grey: #2a2f31;
+
+// the colour secondary grey fades to (in simple item grid)
+$secondary-light-grey-fade: #666565;
+$tertiary-light-grey-fade: #535252;
+
+// dark greys
+//$primary-dark-grey: #12171a;
+$primary-dark-grey: #212527;
 
 // colours based on tiers
 $tier-one-colour: #eedab5;
